--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "phpstan/phpstan": "~0.10",
         "phpstan/phpstan-doctrine": "~0.10",
         "phpstan/phpstan-phpunit": "~0.10",
-        "symfony/var-dumper": "^3.0|^4.0"
+        "symfony/var-dumper": "^3.0|^4.0",
+        "symfony/dependency-injection": "^4.2"
     },
     "license": "MIT",
     "authors": [
