--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - composer self-update
 
 script:
-  - vendor/bin/psalm
+  - composer cs-check
   - phpunit $PHPUNIT_COVERAGE
 
 after_script:
