--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
   - if [ $TRAVIS_PHP_VERSION = '7.3' ]; then PHPUNIT_COVERAGE="--coverage-clover=coverage.clover"; fi
   - if [ $TRAVIS_PHP_VERSION = '7.1' ]; then COMPOSER_FLAGS="--prefer-lowest"; fi
   - composer self-update
+  - composer install --prefer-dist --no-interaction $COMPOSER_FLAGS
 
 script:
   - composer cs-check
