--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,18 @@
     "description": "Doctrine extensions",
     "type": "library",
     "require": {
-        "php": "^7.1",
-        "doctrine/orm": "^2.5"
+        "php": "^7.2",
+        "doctrine/orm": "^2.6.3",
+        "doctrine/inflector": "^1.0|^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.4",
-        "symfony/http-kernel": "^3.0|^4.0",
-        "friendsofphp/php-cs-fixer": "^2.13",
-        "phpstan/phpstan": "~0.10",
-        "phpstan/phpstan-doctrine": "~0.10",
-        "phpstan/phpstan-phpunit": "~0.10",
-        "symfony/var-dumper": "^3.0|^4.0",
-        "symfony/dependency-injection": "^4.2"
+        "bentools/doctrine-ulid": "^1.0",
+        "ramsey/uuid-doctrine": "^1.0",
+        "symfony/uid": "^5.1",
+        "symfony/http-kernel": "^3.4|^4.2|^5.0",
+        "symfony/var-dumper": "^3.4|^4.2|^5.0",
+        "symfony/dependency-injection": "^3.4|^4.2|^5.0",
+        "twig/twig": "^1.29|^2.0|^3.0"
     },
     "license": "MIT",
     "authors": [
