--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,9 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.php_cs export-ignore
+/.php_cs.dist export-ignore
 /.scrutinizer.yml export-ignore
 /.travis.yml export-ignore
+/phpstan.neon export-ignore
 /phpunit.xml.dist export-ignore
+/run export-ignore
 /tests export-ignore
